--- a/week1/HelloConstraint/app/src/main/res/layout-land/activity_main.xml
+++ b/week1/HelloConstraint/app/src/main/res/layout-land/activity_main.xml
@@ -13,13 +13,16 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
         android:onClick="showToast"
         android:text="@string/button_label_toast"
         android:textColor="@android:color/white"
         android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_zero"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
         android:id="@+id/button_count"
@@ -27,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="100dp"
         android:background="@color/colorPrimary"
         android:onClick="countUp"
@@ -34,7 +38,9 @@
         android:textColor="@android:color/white"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_zero"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/show_count"
@@ -63,16 +69,13 @@
         android:id="@+id/button_zero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:background="@android:color/darker_gray"
         android:onClick="countZero"
         android:text="@string/button_label_zero"
         android:textColor="@android:color/white"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_count"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_toast" />
+        tools:layout_editor_absoluteY="140dp" />
 </android.support.constraint.ConstraintLayout>
